[gd_scene load_steps=2 format=3 uid="uid://cxuj8jd7nvypt"]

[ext_resource type="Script" uid="uid://clp05y7yjadqh" path="res://scripts/ui/create_character_view.gd" id="1_jk34x"]

[node name="CreateCharacterView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jk34x")

[node name="CharacterName" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -48.0
offset_right = 100.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
placeholder_text = "Character's Name"

[node name="CreateButton" type="Button" parent="CharacterName"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -66.0
offset_right = 30.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 2
text = "Create"

[node name="BackButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -102.0
offset_top = -48.0
offset_right = -57.0
offset_bottom = -17.0
grow_horizontal = 0
grow_vertical = 0
text = "Back"
